# spinitron.rs

./: .gitignore  Cargo.toml  README.md  config.toml  get_spotify_token.py  kalx-playlists.md  playlist-sample.html
.github/workflows/: daily-playlist-update.yml
docs/: _config.yml  index.html  index.md  index.template.md  playlists.jsonl
scripts/: delete_all_kalx_playlists.py  delete_duplicate_playlists.py  generate_static_html.py  index.template.md  update_website.py
src/: config.rs  main.rs  models.rs  scraper.rs  spotify.rs
